# judicia-platform

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  ISOLATE_INTEGRATION_ISSUE.md  README.md  SUPABASE_SETUP.md  dev.sh  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
abac-engine/: Cargo.toml  README.md
abac-engine/src/: attributes.rs  evaluation.rs  lib.rs  policy.rs
api/: Cargo.toml
api/migrations/: 001_initial.sql  002_contest_admins.sql
api/src/: auth.rs  config.rs  database.rs  main.rs  middleware.rs  websocket.rs
api/src/handlers/: auth_handlers.rs  contest_admin_handlers.rs  contest_handlers.rs  language_handlers.rs  mod.rs  problem_handlers.rs  submission_handlers.rs
backend/: Cargo.toml
backend/src/: main.rs
capability-provider/: Cargo.toml  README.md
capability-provider/src/: database.rs  lib.rs  messaging.rs  platform.rs  websocket.rs
cli-tools/: Cargo.toml
cli-tools/src/: main.rs  template.rs
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BulkUserForm.tsx  CodeEditor.tsx  CreateUserForm.tsx  Layout.tsx  PluginDemo.tsx  SyntaxHighlighter.tsx
client/src/hooks/: use-toast.ts
client/src/lib/: auth.tsx  queryClient.ts  question-sdk.ts
client/src/pages/: AdminPanel.tsx  ContestDetail.tsx  ContestList.tsx  Login.tsx  ProblemView.tsx  Profile.tsx  Settings.tsx  not-found.tsx
core-kernel/: Cargo.toml  README.md
core-kernel/migrations/: 003_plugin_system.sql  004_evaluation_and_events.sql  005_contest_extensions_and_scoring.sql
core-kernel/src/: auth.rs  config.rs  database.rs  event_handlers.rs  kernel.rs  main.rs  plugin_router.rs  queue.rs
core-kernel/src/handlers/: auth_handlers.rs  contest_admin_handlers.rs  contest_extension_handlers.rs  contest_handlers.rs  language_handlers.rs  mod.rs  plugin_handlers.rs  problem_handlers.rs  rejudge_handlers.rs  scoring_handlers.rs  submission_handlers.rs
core-sdk/: Cargo.toml
core-sdk/src/: lib.rs
create-judicia-plugin/: README.md  package.json  tsconfig.json
create-judicia-plugin/src/: cli.ts  index.ts
create-judicia-plugin/src/commands/: add-component.ts  add-route.ts  build.ts  create.ts  serve.ts
create-judicia-plugin/src/templates/: index.ts
create-judicia-plugin/src/utils/: template.ts
create-judicia-plugin/templates/basic/: Cargo.toml.hbs
create-judicia-plugin/templates/basic/src/: lib.rs.hbs
create-judicia-plugin/templates/microfrontend-plugin/: README.md.hbs  package.json.hbs  tsconfig.json.hbs  vite.config.ts.hbs
create-judicia-plugin/templates/microfrontend-plugin/src/components/: PluginEntry.tsx.hbs  {{pascal-case name}}Component.tsx.hbs
evaluation-engine/: Cargo.toml  README.md
evaluation-engine/src/: config.rs  coordinator.rs  database.rs  executor.rs  job_queue.rs  lib.rs  main.rs  sandbox.rs  worker.rs
event-bus/: Cargo.toml  README.md
event-bus/src/: events.rs  lib.rs  manager.rs  subscription.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Contests.tsx  Dashboard.tsx  Problems.tsx
frontend/src/types/: index.ts
isolate-integration/: Cargo.toml  README.md
isolate-integration/examples/: sandbox_usage.rs
isolate-integration/src/: sandbox.rs
jpp-parser/: Cargo.toml
jpp-parser/examples/: interactive-problem.yaml  special-judge-problem.yaml  standard-problem.yaml
jpp-parser/src/: lib.rs  problem.rs  tests.rs  validation.rs
judger/: Cargo.toml
judger/src/: config.rs  coordinator.rs  executor.rs  main.rs  sandbox.rs
judicia-frontend-sdk/: README.md  package.json  tsconfig.json
judicia-frontend-sdk/src/: index.ts
judicia-frontend-sdk/src/components/: PluginComponent.tsx  index.ts  registry.ts
judicia-frontend-sdk/src/events/: index.ts
judicia-frontend-sdk/src/hooks/: index.ts
judicia-frontend-sdk/src/microfrontend/: DynamicRouter.tsx  PluginRegistry.tsx  RemoteComponentLoader.tsx  index.ts
judicia-frontend-sdk/src/platform/: api.ts  index.ts
judicia-frontend-sdk/src/routing/: index.ts
judicia-frontend-sdk/src/sdk/: index.ts
judicia-frontend-sdk/src/store/: index.ts
judicia-frontend-sdk/src/theme/: index.ts
judicia-frontend-sdk/src/types/: index.ts
judicia-frontend-sdk/src/utils/: index.ts
judicia-sdk/: Cargo.toml  README.md
judicia-sdk/examples/: frontend-plugin.rs  judging-plugin.rs  simple-plugin.rs
judicia-sdk/judicia-sdk-macros/: Cargo.toml
judicia-sdk/judicia-sdk-macros/src/: lib.rs
judicia-sdk/judicia-sdk-runtime/: Cargo.toml
judicia-sdk/judicia-sdk-runtime/src/: error.rs  frontend.rs  lib.rs  platform.rs  types.rs  utils.rs
judicia-sdk/src/: error.rs  frontend.rs  lib.rs  macros.rs  platform.rs  types.rs  utils.rs
plugin-runtime/: Cargo.toml  README.md
plugin-runtime/src/: host_functions.rs  lib.rs  plugin_manager.rs  sandbox.rs
plugin-sdk/: Cargo.toml
plugin-sdk/src/: lib.rs
plugins/announcement-system/: Cargo.toml
plugins/announcement-system/src/: lib.rs
plugins/hello-world/: Cargo.toml  README.md  plugin.toml
plugins/hello-world/frontend/: package.json  webpack.config.js
plugins/hello-world/frontend/src/: index.tsx
plugins/hello-world/src/: lib.rs
plugins/icpc-contest/: Cargo.toml
plugins/icpc-contest/src/: lib.rs
plugins/notification-system/: Cargo.toml
plugins/notification-system/src/: lib.rs
plugins/standard-judge/: Cargo.toml
plugins/standard-judge/src/: lib.rs
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts  vite.ts
shared/: Cargo.toml  README.md  schema.ts
shared/src/: lib.rs  models.rs  types.rs
