[workspace]
resolver = "2"
members = [
    "core-kernel",          # Core Kernel (renamed from api)
    "evaluation-engine",    # Evaluation Engine (renamed from judger)
    "shared",              # Shared types and utilities
    "plugin-sdk",          # Plugin SDK for Wasm plugins
    "plugin-runtime",      # WebAssembly plugin runtime
    "event-bus",           # Event-driven communication system
    "capability-provider", # Capability API provider
    "abac-engine",         # ABAC authorization engine
    "jpp-parser",          # JPP (Judicia Problem Package) parser
    "cli-tools",           # CLI tools for plugin development
    "judicia-sdk",         # New Plugin SDK with procedural macros
    "isolate-integration", # Isolate integration crate
]
exclude = [
    "plugins/*",           # Exclude plugin directories from workspace
]

[workspace.dependencies]
# Core framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization & Data
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication & Authorization
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Configuration
config = "0.14"

# Message Queue & Events
lapin = "2.3"
futures-util = "0.3"

# WebAssembly Runtime
wasmtime = { version = "17.0", features = ["component-model"] }
wasmtime-wasi = "17.0"

# Plugin SDK
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# CLI Tools
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Security & Sandboxing
nix = "0.28"
libc = "0.2"

# Additional utilities
once_cell = "1.19"
async-trait = "0.1"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
