[package]
name = "capability-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
wasmtime = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }
event-bus = { path = "../event-bus" }
evaluation-engine = { path = "../evaluation-engine" }