[package]
name = "cli-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-judicia-plugin"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
shared = { path = "../shared" }