[package]
name = "core-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }

# Plugin system dependencies
plugin-runtime = { path = "../plugin-runtime" }
capability-provider = { path = "../capability-provider" }
event-bus = { path = "../event-bus" }
abac-engine = { path = "../abac-engine" }
evaluation-engine = { path = "../evaluation-engine" }

# Legacy auth (to be migrated to plugins)
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# HTTP utilities
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"