[package]
name = "evaluation-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
event-bus = { path = "../event-bus" }
jpp-parser = { path = "../jpp-parser" }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
lapin = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tempfile = "3.8"
nix = "0.27"
libc = "0.2"