[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lapin = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }