[package]
name = "judicia-sdk-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for Judicia Platform Plugin SDK"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"