[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Empty workspace to avoid parent workspace conflicts
[workspace]

[dependencies]
plugin-sdk = { path = "../../plugin-sdk" }

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
