[workspace]

[package]
name = "judicia-notification-system"
version = "1.0.0"
edition = "2021"
description = "Real-time notification system plugin for Judicia Platform"
authors = ["Judicia Platform Team"]
license = "MIT"
repository = "https://github.com/judicia/judicia-platform"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Judicia Plugin SDK
judicia-sdk = { path = "../../judicia-sdk" }

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document", 
    "Element",
    "HtmlElement",
    "Window",
    "Event",
    "EventTarget",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Notification",
    "ServiceWorkerRegistration",
    "PushManager"
] }
console_error_panic_hook = "0.1"

# Async runtime
wasm-bindgen-futures = "0.4"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
regex = "1.0"
base64 = "0.22"

# Notification utilities
indexmap = { version = "2.0", features = ["serde"] }